# realtime_hamer

./: .gitignore  README.md  pyproject.toml
assets/data/mano/: .gitignore
assets/hamer_ckpts/checkpoints/: .gitignore
scripts/: demo_video.py  env.sh
src/realtime_hamer/: engine_trt.py  hand_pose_estimator.py  trt_runtime.py  viz.py
src/realtime_hamer/configs/: __init__.py
src/realtime_hamer/datasets/: __init__.py  vitdet_dataset.py
src/realtime_hamer/detection/: __init__.py  rtmpose_detector.py
src/realtime_hamer/models/: __init__.py  hamer.py
src/realtime_hamer/models/components/: pose_transformer.py
src/realtime_hamer/scripts/: demo.py  export_hamer_trt.py
src/realtime_hamer/utils/: __init__.py  geometry.py  pytorch3d_renderer.py  renderer.py
