[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"

[project]
name = "realtime-hamer"
version = "0.1.0"
description = "Realtime HaMeR hand reconstruction (RTMPose + TensorRT + viser)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.1",
    # Match fast_foundation_stereo; CUDA-12 build (import torch first for CUDA EP).
    "onnxruntime-gpu==1.22.0",
    "rtmlib>=0.0.15",
    "einops>=0.8.0",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pytorch-lightning>=2.0.0",
    "smplx==0.1.28",
    "timm>=0.9.0",
    "yacs>=0.1.8",
    "omegaconf>=2.3.0",
    "chumpy",
    "viser>=1.0.16",
    "tyro>=0.9.17",
]

[tool.uv]
override-dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.1",
    "onnxruntime-gpu==1.22.0",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/mattloper/chumpy" }
