[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"

[project]
name = "realtime-hamer"
version = "0.1.0"
description = "Realtime HaMeR hand reconstruction (RTMPose + TensorRT)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.1",
    # Same CUDA-12 stack as fast_foundation_stereo
    "onnx>=1.16.0",
    "onnxruntime-gpu==1.22.0",
    "tensorrt-cu12==11.0.0.114",
    "tensorrt-dispatch-cu12==11.0.0.114",
    "tensorrt-lean-cu12==11.0.0.114",
    "rtmlib>=0.0.15",
    "einops>=0.8.0",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pytorch-lightning>=2.0.0",
    "smplx==0.1.28",
    "timm>=0.9.0",
    "yacs>=0.1.8",
    "omegaconf>=2.3.0",
    "chumpy",
    "viser>=1.0.16",
    "tyro>=0.9.17",
    "trimesh>=4.0.0",
    # Prebuilt wheel for torch 2.9 + cu128 (MiroPsota/torch_packages_builder).
    "pytorch3d==0.7.9+pt2.9.0cu128",
]

[tool.uv]
override-dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.1",
    "onnxruntime-gpu==1.22.0",
]

[[tool.uv.index]]
name = "torch-packages"
url = "https://miropsota.github.io/torch_packages_builder"
explicit = true

[tool.uv.sources]
chumpy = { git = "https://github.com/mattloper/chumpy" }
pytorch3d = { index = "torch-packages" }
